--- a/src/main/resources/com/example/payment/addPage.fxml
+++ b/src/main/resources/com/example/payment/addPage.fxml
@@ -6,10 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="306.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.payment.AddPage">
    <children>
-      <Label layoutX="101.0" layoutY="42.0" prefHeight="17.0" prefWidth="205.0" text="Додати квитанцію" textAlignment="CENTER">
+      <Label layoutX="90.0" layoutY="14.0" prefHeight="17.0" prefWidth="205.0" text="Додати квитанцію" textAlignment="CENTER">
          <font>
             <Font name="Microsoft Sans Serif" size="12.0" />
          </font>
@@ -24,6 +23,9 @@
       <TextField fx:id="text_prev" layoutX="129.0" layoutY="188.0" />
       <TextField fx:id="text_curr" layoutX="129.0" layoutY="232.0" />
       <TextField fx:id="text_count" layoutX="129.0" layoutY="269.0" />
-      <Button fx:id="btn_add" layoutX="83.0" layoutY="338.0" mnemonicParsing="false" onAction="#AddHandler" prefHeight="25.0" prefWidth="149.0" text="Додати" />
+      <Button fx:id="btn_add" layoutX="79.0" layoutY="367.0" mnemonicParsing="false" onAction="#AddHandler" prefHeight="25.0" prefWidth="149.0" text="Додати" />
+      <Label layoutX="20.0" layoutY="303.0" prefHeight="17.0" prefWidth="273.0" text="Будьте уважні та вводіть коректну інформацію" />
+      <Label layoutX="20.0" layoutY="328.0" prefHeight="17.0" prefWidth="264.0" text="Наші спеціалісти перевіряють достовірність" />
+      <Label layoutX="20.0" layoutY="345.0" prefHeight="17.0" prefWidth="264.0" text="введених даних" />
    </children>
 </AnchorPane>
